--- a/assets/style.css
+++ b/assets/style.css
@@ -1,62 +1,127 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background-color: rgb(87, 87, 177);
+  font-family: system-ui, sans-serif;
+  background-color: #023047;
+  color: #050505;
+  font-size: 100%;
 }
 
 h1 {
-  font-weight: bold;
-  text-align: center;
-  margin-top: 20px;
+  font-size: calc(1.5rem + 2vw);
   color: white;
 }
 
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.main-title {
+  text-align: center;
+  margin: 24px 0;
 }
 
-.min-container {
+.posts-list {
+  width: 90%;
+  max-width: 600px;
   margin: 0 auto;
-  background-color: brown;
-  width: 50%;
 }
 
-.container-box {
-  height: 500px;
+.posts-list > * {
+  margin-bottom: 24px;
+}
+
+.post { 
+  padding: 16px;
   background-color: white;
-  margin-top: 50px;
+}
+
+.post__header {
+  margin-bottom: 16px;
+}
+
+.post-meta {
+  display: flex;
+}
+
+.post-meta__icon {
+  margin-right: 24px;
+}
+
+.post-meta__data {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.post-meta__author {
+  font-weight: bold;
+}
+
+.post-meta__time {
+  font-size: 0.8rem;
+}
+
+.profile-pic {
+  border-radius: 50%;
+  max-width: 60px;
+}
+
+.profile-pic-default {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #0CD977;
+  height: 60px;
+  width: 60px;
+  overflow: hidden;
+  border-radius: 50%;
 }
 
-.container-inside {
-  width: 95%;
-  height: 95%;
-  background-color: aqua;
+.profile-pic-default span {
+  font-weight: bold;
+  color: #023047;
+  font-size: 1.2rem;
+  text-transform: uppercase;
 }
 
-.cont-profile {
-  background-color: green;
-  width: 30%;
-  height: 50px;
-  margin-top: 10px;
+.post__text {
+  margin-bottom: 16px;
+}
+
+.post__image {
+  margin-bottom: 16px;
+}
+
+.post__image img {
+  width: 100%;
+}
+
+.likes {
   display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 
-.photo {
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  margin-right: 10px ;
-  background-color: yellow;
+.like-button {
+  display: inline-block;
+  padding: 16px;
+  border-radius: 8px;    
+  text-decoration: none;
+  color: #404040;
 }
 
-.name {
-  width: 100px;
-  height: 40px;
-  background-color: yellow;
+.like-button:not(.like-button--liked):hover {
+  background-color: #e3e3e3
+}
+
+.like-button__label {
+  font-weight: bold;
+}
+
+.like-button--liked {
+  color: #0CD977;
+  cursor: default;
 }
 
 .comment {
